concepts/version1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: version1
  labels:
    version: v1
spec:
  restartPolicy: Always
  containers:    
  - name: version1
    image: choisunguk/istio-pythondemo:v1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: version1-svc
spec:
  selector:
    version: v1
  ports:
  - port: 80
    targetPort: 80
