concepts/version2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: version2
  labels:
    version: v2
spec:
  containers:
  - name: version1
    image: choisunguk/istio-pythondemo:v2
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: version12svc
spec:
  selector:
    version: v2
  ports:
  - port: 80
    targetPort: 80
