concepts/versoin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: version2
  labels:
    app: demo
    version: v2
spec:
  restartPolicy: Always
  containers:
  - name: version1
    image: choisunguk/istio-pythondemo:v2.1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: version1
  labels:
    app: demo
    version: v1
spec:
  restartPolicy: Always
  containers:    
  - name: version1
    image: choisunguk/istio-pythondemo:v1.1
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-version
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 80
