concepts/first-example.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtualservice
spec:
  hosts:
  - "helloworld.com"
  gateways:
  - demo-gateway
  http:
  - route:
    - destination:
        host: version1
        subset: v1
      weight: 30
    - destination:
        host: version2
        subset: v2
      weight: 70
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: 
spec:
  host: "helloworld.com"
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
